Depsgraph: world update happening eternally on background (set) scene #51943

Closed
opened 2017-06-30 18:48:17 +02:00 by Dalai Felinto · 4 comments

Short description of error
Blender gets really slow when I switch to the background scene.

Exact steps for others to reproduce the error

It's a simple file with Eevee:

  • Two scenes - Main and Background
  • Background is a "set" for Main

delete-set.blend

Now switch from main to background. Depsgraph will keep calling the world_changed callback, and since this clear the gpu materials for world, it makes Eevee to really hang if your driver doesn't do material caching.

Run blender with the environment variable: __GL_SHADER_DISK_CACHE=0 to prevent this going unnoticed.

**Short description of error** Blender gets really slow when I switch to the background scene. **Exact steps for others to reproduce the error** It's a simple file with Eevee: * Two scenes - Main and Background * Background is a "set" for Main [delete-set.blend](https://archive.blender.org/developer/F647812/delete-set.blend) Now switch from main to background. Depsgraph will keep calling the `world_changed` callback, and since this clear the gpu materials for world, it makes Eevee to really hang if your driver doesn't do material caching. Run blender with the environment variable: `__GL_SHADER_DISK_CACHE=0 ` to prevent this going unnoticed.
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Sergey Sharybin was assigned by Dalai Felinto 2017-06-30 18:48:51 +02:00

This issue was referenced by a69e3c9ee1

This issue was referenced by a69e3c9ee16241068797b2852504441bfe3d5ca2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51943
No description provided.