Fix T51943: Depsgraph: world update happening eternally on background (set) scene

The issue was caused by updates being flushed for all scenes, while actual update
was only called for an active one.

Not sure why do we need to flush updates for all scenes, so now we only flush
scenes which are updated.