source/blender/blenkernel/intern/scene.c
@@ -1517,7 +1517,7 @@ void BKE_scene_update_tagged(EvaluationContext *eval_ctx, Main *bmain, Scene *sc
 	prepare_mesh_for_viewport_render(bmain, scene);
 
 	/* flush recalc flags to dependencies */
-	DEG_ids_flush_tagged(bmain);
+	DEG_ids_flush_tagged(bmain, scene);
 
 	/* removed calls to quick_cache, see pointcache.c */
 	
